# stock

./: .gitattributes  .gitignore  Dockerfile  README.md  _tmp_dump_wechat_controls.py  _tmp_probe_00175_dividend.py  _tmp_resend_group888_chunked.py  _tmp_run_group888_fundamentals.py  _tmp_send_goldwind_02208_to_888.py  fundamental_data_source_fail.txt  pyproject.toml  requirements.txt  wxauto.md
chanlun_stock.egg-info/: PKG-INFO
config/: stock_holdings.json
docs/: README.md  add-hk-holding-runbook.md  capital-flow-module-spec.md  chanlun-rule-spec.md  combined-analysis-output-spec.md  combined-analysis-service-interface.md  fundamental-code-layout-draft.md  fundamental-data-source.md  fundamental-doc-map.md  fundamental-industry-layering.md  fundamental-interim-scoring-design.md  fundamental-interim-scoring-interface.md  fundamental-module-spec.md  fundamental-python-model-draft.md  fundamental-roadmap.md  fundamental-snapshot-example.md  fundamental-tech-config-draft.md  fundamental-tech-submodels.md  fundamental-v1-minimum-fields.md  hk-financial-second-source-plan.md  hk-minute-data-source.md  miniapp-cloud-publish-schema.md  miniapp-service-agent-prompt.md  segment-implementation-guide.md  tencent-cloud-deploy-runbook.md  tencent-container-service-plan.md
scripts/: _verify_resend_picc_to_chen.py  backoff_pull_03690_60m.py  batch_generate_and_send_portfolio_mixed_reports.py  batch_generate_capital_flow_reports.py  batch_generate_h_share_capital_flow_reports.py  batch_generate_single_compact_reports.py  batch_prepare_chanlun_reports.py  check_datasources.py  (+59 more)
(+426 files in other folders)
