[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chanlun-stock"
version = "0.1.0"
description = "Chan theory-based stock analysis helper in Python"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Developer", email = "dev@example.com"}
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "pydantic>=2.0",
    "matplotlib>=3.5.0",
    "mplfinance>=0.12.0",
    "typer>=0.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
visualization = [
    "plotly>=5.0",
    "jupyter>=1.0",
]
automation = [
    "pillow>=10.0.0",
    "psutil>=5.9.0",
    "pyperclip>=1.8.0",
    "pywin32>=311",
    "svglib>=1.6.0",
    "reportlab>=4.0.0",
    "rlPyCairo>=0.4.0",
]

[project.scripts]
chanlun = "chanlun.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["chanlun"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
